# caffe2

./: .Doxyfile-c  .Doxyfile-python  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  EXAMPLE-README-FOR-RUNNING-DOCS.md  LICENSE  LICENSE-DOCUMENTATION  LICENSE.md  Makefile  NOTICE  README.md  _config.yml  all_tests.sh  appveyor.yml  build.py  cplusplus_tutorial.md  datasets.html  datasets.md  index.html  index.md  installation.html  license.html  operators.html  operators.md  operators_custom.html  operators_custom.md  release-notes-0.6.0.md  release-notes.md  robots.txt  setup.py  setup_caffe2.py  tutorials.html  (+3 more)
caffe2/: CMakeLists.txt  setup.py
caffe2/binaries/: CMakeLists.txt  convert_caffe_image_db.cc  intro.cpp  make_cifar_db.cc  make_image_db.cc  speed_benchmark.cc
caffe2/contrib/: CMakeLists.txt
caffe2/contrib/aten/: aten_op.cc  aten_op_cuda.cc  aten_op_template.h  gen_op.py
caffe2/contrib/cuda-convnet2/: convdata.py  convnet.py  initw.py  layer.py  shownet.py
caffe2/contrib/gloo/: common.cc  common_world_ops.h
caffe2/contrib/ios/: CMakeLists.txt
caffe2/contrib/mpscnn-fb/: mpscnn.mm  mpscnn_test.mm
caffe2/contrib/nccl/: BREW  cuda_nccl_op_gpu.cc
caffe2/contrib/nervana/: nervana_math_gpu.cc
caffe2/contrib/nnpack/: nnpack_ops.cc  nnpack_ops_test.py
caffe2/contrib/opencl/: CMakeLists.txt  context.cc  context.h  operator.cc  operator.h
caffe2/contrib/script/: caffe2_script_test.py  compiler.cc  error_report.h  lexer.h  parser.h  tree_views.h
caffe2/contrib/tensorrt/: tensorrt_tranformer.cc
caffe2/core/: allocator.h  blob.h  blob_test.cc  common.cc  common.h  common_cudnn.cc  common_cudnn.h  common_gpu.cc  common_omp.h  context.cc  context.h  context_gpu.cu  context_gpu.h  context_test.cc  cudnn_wrappers.h  db.h  event.cc  event.h  graph_test.cc  init_omp.cc  logging.cc  logging.h  logging_is_google_glog.h  module.cc  module_test.cc  net_async_base.h  net_dag.cc  net_gpu.cc  net_gpu.h  net_simple.cc  net_simple_async.cc  net_test.cc  observer_test.cc  operator.cc  operator.h  operator_schema.cc  operator_schema.h  operator_test.cc  plan_executor.cc  predictor.cc  (+7 more)
caffe2/cuda_rtc/: common_rtc.h  elemenntwise_rtc_gpu.cc
caffe2/db/: lmdb.cc
caffe2/distributed/: file_store_handler.cc
caffe2/experiments/python/: SparseTransformer.py
caffe2/image/: image_input_op.cc  image_input_op.h  transform_gpu.cu
caffe2/mkl/operators/: conv_op.cc  conv_op_mkldnn.cc  fully_connected_op.cc  local_response_normalization_op.cc  operator_fallback_mkl.cc  operator_fallback_mkl.h  pool_op.cc  relu_op.cc  spatial_batch_norm_op.cc
caffe2/mkl/utils/: mkl_context.h
caffe2/mobile/: CMakeLists.txt
caffe2/mobile/contrib/: CMakeLists.txt
caffe2/mpi/: mpi_common.h
caffe2/observers/: operator_attaching_net_observer.h  time_observer_test.cc
caffe2/onnx/: backend.cc  backend.h  backend_rep.cc  backend_rep.h  device.cc  device.h  helper.cc  helper.h  onnx_exporter.cc  onnx_exporter.h
caffe2/operators/: accuracy_op.cc  assert_op.cc  assert_op.cu  assert_op.h  batch_matmul_op.cc  batch_matmul_op.h  boolean_mask_ops.h  caffe_pooling_op.cu  ceil_op.cc  ceil_op.cu  clip_by_global_norm_op.cc  clip_by_global_norm_op.cu  clip_by_global_norm_op.h  collect_and_distribute_fpn_rpn_proposals_op.cc  communicator_op.cc  concat_split_op.cc  conv_bgrad_op_cudnn.cc  conv_dgrad_op_cudnn.cc  conv_gradient_op.cc  conv_op.cc  conv_op.h  conv_op_cudnn.cc  conv_op_cudnn_base.h  conv_op_impl.h  conv_pool_op_base.h  conv_transpose_op_cudnn.cc  conv_transpose_op_mobile_impl.h  conv_transpose_op_mobile_test.cc  conv_wgrad_op_cudnn.cc  detection_output_op.cc  detection_output_op.cu  detection_output_op.h  detection_output_op_gpu.cc  distance_op.cc  distance_op.h  dropout_op_cudnn.cc  elementwise_op.cc  elementwise_op.cu  elementwise_op.h  filler_op.h  (+83 more)
caffe2/perfkernels/: CMakeLists.txt  clang_bugfix.h  typed_axpy_avx.cc  typed_axpy_avx2.cc
caffe2/proto/: CMakeLists.txt  caffe2.proto
caffe2/python/: CMakeLists.txt  benchmark_res50.py  brew.py  caffe_translator.py  caffe_translator_test.py  checkpoint_test.py  cnn.py  cnn_test.py  convnet_benchmarks.py  core.py  core_gradients_test.py  core_test.py  data_parallel_model.py  data_parallel_model_test.py  data_workers.py  dataio.py  dataio_test.py  db_test.py  deploy.py  gradient_checker.py  gru_cell.py  hypothesis_test.py  hypothesis_test_util.py  layer_model_helper.py  layer_model_instantiator.py  layers_test.py  lstm_benchmark.py  memonger.py  memonger_test.py  mkl_basic_test.py  model_helper.py  net_builder_test.py  net_printer.py  optimizer.py  optimizer_test.py  optimizer_test_util.py  parallel_workers.py  pipeline.py  priorbox_test.py  pybind_state.cc  (+19 more)
caffe2/python/examples/: cifar10_fp16.py  resnet50_trainer.py  seq2seq.py
caffe2/python/helpers/: algebra.py  array_helpers.py  conv.py  fc.py  normalization.py  pooling.py
caffe2/python/layers/: layers.py
caffe2/python/mint/: app.py
caffe2/python/mkl/: convnet_benchmarks.py  mkl_LRN_speed_test.py  mkl_fc_op_test.py  mkl_pool_op_test.py
caffe2/python/modeling/: initializers.py  parameter_info.py
caffe2/python/models/: __sym_init__.py  download.py  resnet.py
caffe2/queue/: blobs_queue.cc  blobs_queue.h  queue_ops.cc  queue_ops.h
caffe2/sgd/: adagrad_op.h  adagrad_op_gpu.cu  adam_op.h  adam_op_gpu.cu  lars_op.cc  momentum_sgd_op.h  momentum_sgd_op_gpu.cu
caffe2/share/: CMakeLists.txt
caffe2/trt/: CMakeLists.txt  tensorrt_op_trt.cc  tensorrt_op_trt.h  tensorrt_tranformer.cc  tensorrt_tranformer.h  trt_utils.h
caffe2/utils/: GpuBitonicSort.cuh  GpuScanUtils.cuh  bbox_util.cc  bbox_util.cu  bbox_util.h  conversions.h  fatal_signal_asan_no_sig_test.cc  fatal_signal_test.cc  math-detail.h  math.h  math_cpu.cc  math_gpu.cu  mkl_alternate.h  mkl_utils.h  proto_utils.cc  proto_utils.h  signal_handler.cc  signal_handler.h  smart_tensor_printer_test.cc  string_utils.cc  string_utils.h  thread_pool.h  windows_cpu_supports.h  workspace_utils.cc  workspace_utils.h
caffe2/utils/myutil/: build.h  (+7 more)
(+7291 files in other folders)
