if(MSVC)
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /FORCE:MULTIPLE")
ENDIF()

caffe2_binary_target("convert_caffe_image_db.cc")
caffe2_binary_target("convert_db.cc")
caffe2_binary_target("db_throughput.cc")
caffe2_binary_target("make_cifar_db.cc")
caffe2_binary_target("make_mnist_db.cc")
caffe2_binary_target("predictor_verifier.cc")
caffe2_binary_target("print_registered_core_operators.cc")
caffe2_binary_target("run_plan.cc")
caffe2_binary_target("speed_benchmark.cc")
caffe2_binary_target("split_db.cc")

if (USE_CUDA)
  caffe2_binary_target("inspect_gpus.cc")
  target_link_libraries(inspect_gpus ${Caffe2_CUDA_DEPENDENCY_LIBS})
  target_link_libraries(convert_caffe_image_db ${Caffe2_CUDA_DEPENDENCY_LIBS})
  target_link_libraries(convert_db ${Caffe2_CUDA_DEPENDENCY_LIBS})
  target_link_libraries(db_throughput ${Caffe2_CUDA_DEPENDENCY_LIBS})
  target_link_libraries(make_cifar_db ${Caffe2_CUDA_DEPENDENCY_LIBS})
  target_link_libraries(make_mnist_db ${Caffe2_CUDA_DEPENDENCY_LIBS})
  target_link_libraries(predictor_verifier ${Caffe2_CUDA_DEPENDENCY_LIBS})
  target_link_libraries(print_registered_core_operators ${Caffe2_CUDA_DEPENDENCY_LIBS})
  target_link_libraries(run_plan ${Caffe2_CUDA_DEPENDENCY_LIBS})
  target_link_libraries(speed_benchmark ${Caffe2_CUDA_DEPENDENCY_LIBS})
  target_link_libraries(split_db ${Caffe2_CUDA_DEPENDENCY_LIBS})
  caffe2_binary_target("print_core_object_sizes.cc")
  target_link_libraries(print_core_object_sizes ${Caffe2_CUDA_DEPENDENCY_LIBS})

  if (BUILD_TEST)
    # Core overhead benchmark
    caffe2_binary_target("core_overhead_benchmark.cc")
    target_link_libraries(core_overhead_benchmark benchmark ${CUDA_curand_LIBRARY})
  endif()
endif()

if (USE_ZMQ)
  caffe2_binary_target("zmq_feeder.cc")
endif()

if(USE_MPI)
  caffe2_binary_target("run_plan_mpi.cc")
endif()

if (USE_OPENCV AND USE_LEVELDB)
  caffe2_binary_target("convert_encoded_to_raw_leveldb.cc")
endif()

if (USE_OPENCV)
  caffe2_binary_target("make_image_db.cc")
endif()

# ---[ tutorials
caffe2_binary_target("tutorial_blob.cc")
target_link_libraries(tutorial_blob ${Caffe2_CUDA_DEPENDENCY_LIBS})